backend/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
  - name: probe
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: traffic
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
  type: ClusterIP
